[package]
name = "micromouse-sim-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"